# Vex-V5-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: SDL_mixer.h
inc/SDL3/: SDL_audio.h  SDL_events.h  SDL_filesystem.h  SDL_hints.h  SDL_image.h  SDL_main.h  SDL_mouse.h  SDL_rwops.h  SDL_ttf.h
inc/vex/: utils.h  vex.cpp  vex.h
src/: Test.cpp  main.cpp
